objects/CRM_Mortgage_Application_Data__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Mtg_Aggregator_Conversion_Rate__c</fullName>
        <formula>CRM_Mtg_Aggregator__r.CRM_Mtg_Aggregator_Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aggregator Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Aggregator_Id__c</fullName>
        <label>Aggregator Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Aggregator_Name__c</fullName>
        <label>Aggregator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Aggregator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aggregator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mortgage Applications</relationshipLabel>
        <relationshipName>Mortgage_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Application_Amount__c</fullName>
        <label>Application Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Application_Id__c</fullName>
        <externalId>true</externalId>
        <label>Application Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Application_Month__c</fullName>
        <label>Application Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Application_Quarter__c</fullName>
        <formula>CASE(MONTH(CRM_Mtg_Application_Date__c),
1, 1,
2, 1,
3, 1, 
4, 2, 
5, 2, 
6, 2,
7, 3,
8, 3,
9, 3,
10, 4,
11, 4,
12, 4,
0)</formula>
        <label>Application Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Application_State__c</fullName>
        <label>Application State</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Application_Status__c</fullName>
        <label>Application Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Application_Target__c</fullName>
        <label>Application Target</label>
        <referenceTo>CRM_Mtg_Application_Target__c</referenceTo>
        <relationshipLabel>Mortgage Applications</relationshipLabel>
        <relationshipName>Mortgage_Applications1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Application_Year__c</fullName>
        <label>Application Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_Id__c</fullName>
        <label>BDM Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_Name__c</fullName>
        <label>BDM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_SF_Id__c</fullName>
        <description>BDM&apos;s Unique ARM ID from NextGen (stored in NG as ExternalID)</description>
        <externalId>true</externalId>
        <inlineHelpText>BDM&apos;s Unique ARM ID from NextGen (stored in NG as ExternalID)</inlineHelpText>
        <label>BDM SF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mortgage_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Broker_Application_Id__c</fullName>
        <label>Broker Application Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Broker_Conversion_Rate__c</fullName>
        <formula>CRM_Mtg_Broker__r.CRM_Mtg_Broker_Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Broker_Id__c</fullName>
        <label>Broker Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Broker_Name__c</fullName>
        <label>Broker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mortgage Applications</relationshipLabel>
        <relationshipName>Mortgage_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Broker_s_BDM__c</fullName>
        <formula>CRM_Mtg_Broker__r.CRM_Mtg_Mortgage_BDM__r.FirstName  &amp; &apos; &apos; &amp;CRM_Mtg_Broker__r.CRM_Mtg_Mortgage_BDM__r.LastName</formula>
        <label>Broker&apos;s BDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Mortgage Applications</relationshipLabel>
        <relationshipName>Mortgage_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Current_Milestone_Date_Time__c</fullName>
        <label>Current Milestone Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Current_Milestone__c</fullName>
        <label>Current Milestone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_DESRecordActiveFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DESRecordActiveFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Doc_Header_Id__c</fullName>
        <externalId>true</externalId>
        <label>Doc Header Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Error_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Failed_Record__c</fullName>
        <formula>OR(CRM_Mtg_Application_Target__r.CRM_Mtg_Is_Default__c, 
CRM_Mtg_Settlement_Target__r.CRM_Mtg_Is_Default__c)</formula>
        <label>Is Failed Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Mortgage_BDM__c</fullName>
        <formula>CRM_Mtg_BDM__r.Id =  $User.Id</formula>
        <label>Is Mortgage BDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Lender_Loan_Type__c</fullName>
        <label>Lender Loan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Loan_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Contract</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Mortgage Applications</relationshipLabel>
        <relationshipName>Mortgage_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Mortgage Applications</relationshipLabel>
        <relationshipName>Mortgage_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Primary_Applicant_Name__c</fullName>
        <label>Primary Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Settlement_Amount__c</fullName>
        <label>Settlement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Settlement_Date__c</fullName>
        <label>Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Settlement_Month__c</fullName>
        <label>Settlement Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Settlement_Quarter__c</fullName>
        <formula>CASE(MONTH(CRM_Mtg_Settlement_Date__c),
1, 1,
2, 1,
3, 1, 
4, 2, 
5, 2, 
6, 2,
7, 3,
8, 3,
9, 3,
10, 4,
11, 4,
12, 4,
0)</formula>
        <label>Settlement Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Settlement_Target__c</fullName>
        <label>Settlement Target</label>
        <referenceTo>CRM_Mtg_Settlement_Target__c</referenceTo>
        <relationshipLabel>Mortgage Applications</relationshipLabel>
        <relationshipName>Mortgage_Applications1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Settlement_Year__c</fullName>
        <label>Settlement Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Status_Date_Time__c</fullName>
        <label>Status Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_LVR__c</fullName>
        <label>Total LVR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Loan_Amount__c</fullName>
        <label>Total Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Security_Value__c</fullName>
        <label>Total Security Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Update_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <description>Identifier from lead source (e.g. direct lead, scenario case, PPS, Resolve, etc)</description>
        <externalId>true</externalId>
        <label>Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Processed_Check__c</fullName>
        <description>True if record is to be processed - i.e. update a B2B opportunity sourced from a B2B lead such as PPS or Resolve.</description>
        <formula>AND
(
  OR
   (
   Lead_Source_Type__c = &quot;PepperProductSelector&quot;,
   Lead_Source_Type__c = &quot;Resolve&quot;
   ),

  OR
   (
   AND
     (
     NOT(ISBLANK(Lead_Processed_Date__c)),
     LastModifiedDate &gt; Lead_Processed_Date__c
     ),
   ISBLANK(Lead_Processed_Date__c)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Processed Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Processed_Date__c</fullName>
        <description>Date record was last processed to update B2B lead records</description>
        <label>Lead Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Description__c</fullName>
        <label>Lead Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Type__c</fullName>
        <label>Lead Source Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT( CRM_Mtg_Opportunity__r.StageName )</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <label>Mortgage Application</label>
    <listViews>
        <fullName>All_WL_Applications</fullName>
        <columns>NAME</columns>
        <columns>CRM_Mtg_Primary_Applicant_Name__c</columns>
        <columns>CRM_Mtg_Application_Date__c</columns>
        <columns>CRM_Mtg_Application_Status__c</columns>
        <columns>CRM_Mtg_Application_Amount__c</columns>
        <columns>CRM_Mtg_Application_State__c</columns>
        <columns>CRM_Mtg_Aggregator__c</columns>
        <columns>CRM_Mtg_Broker__c</columns>
        <columns>CRM_Mtg_BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </filters>
        <label>All WL Applications</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_BDM_Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_WL_Applications_Without_State</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>CRM_Mtg_Primary_Applicant_Name__c</columns>
        <columns>CRM_Mtg_Application_Date__c</columns>
        <columns>CRM_Mtg_Application_Amount__c</columns>
        <columns>CRM_Mtg_Aggregator__c</columns>
        <columns>CRM_Mtg_Broker__c</columns>
        <columns>CRM_Mtg_BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Application_State__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Application_Date__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Application_Date__c</field>
            <operation>equals</operation>
            <value>LAST_QUARTER</value>
        </filters>
        <label>All WL Applications Without State</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_BDM_Executives</group>
            <group>CRM_Mortgage_Scenario_Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_WL_Applications_Without_State_Today</fullName>
        <columns>NAME</columns>
        <columns>CRM_Mtg_Primary_Applicant_Name__c</columns>
        <columns>CRM_Mtg_Application_Date__c</columns>
        <columns>CRM_Mtg_Application_Amount__c</columns>
        <columns>CRM_Mtg_Aggregator__c</columns>
        <columns>CRM_Mtg_Broker__c</columns>
        <columns>CRM_Mtg_BDM__c</columns>
        <columns>CRM_Mtg_Application_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Application_State__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All WL Applications Without State Today</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_BDM_Executives</group>
            <group>CRM_Mortgage_Scenario_Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_Failed_Applications</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5) AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>CRM_Mtg_Update_Record__c</columns>
        <columns>CRM_Mtg_Error_Resolved__c</columns>
        <columns>CRM_Mtg_Aggregator__c</columns>
        <columns>CRM_Mtg_Aggregator_Id__c</columns>
        <columns>CRM_Mtg_Broker__c</columns>
        <columns>CRM_Mtg_Broker_Id__c</columns>
        <columns>CRM_Mtg_BDM__c</columns>
        <columns>CRM_Mtg_Failure_Reason__c</columns>
        <columns>CRM_Mtg_Channel__c</columns>
        <columns>CRM_Mtg_Application_State__c</columns>
        <columns>CRM_Mtg_Application_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Failure_Reason__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Is_Failed_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Error_Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Application_Date__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Application_Date__c</field>
            <operation>equals</operation>
            <value>LAST_QUARTER</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Failure_Reason__c</field>
            <operation>notEqual</operation>
            <value>State does not exist on application</value>
        </filters>
        <label>Failed Applications</label>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_Retail_Applications</fullName>
        <columns>NAME</columns>
        <columns>CRM_Mtg_Primary_Applicant_Name__c</columns>
        <columns>CRM_Mtg_Application_Date__c</columns>
        <columns>CRM_Mtg_Application_Amount__c</columns>
        <columns>CRM_Mtg_Application_Status__c</columns>
        <columns>CRM_Mtg_Aggregator__c</columns>
        <columns>CRM_Mtg_Broker__c</columns>
        <columns>CRM_Mtg_BDM__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <label>All Retail Applications</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_BDM_Executives</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mortgage Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Lead_Id_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CRM_Mtg_Case__c != null, Lead_ID__c != PRIORVALUE(Lead_ID__c ), NOT(ISPICKVAL($User.ScCollection_UserType__c, &quot;TL&quot;)),$Profile.Name != &quot;System Admin Integration&quot;,$Profile.Name != &quot;System Administrator&quot;)</errorConditionFormula>
        <errorDisplayField>Lead_ID__c</errorDisplayField>
        <errorMessage>You do not have access to change scenario link.</errorMessage>
    </validationRules>
</CustomObject>